  - Cache results of filename parsing for speedup
* Removed python-gettext from setup.py.  Whoops!
* Merged in lp:~mterry/duplicity/pytest-runner-move
  - Move pytest-runner to testing requirements in setup
* Fix language classifiers in setup.py
* Remove speedup in testing backup.  The math was correct,
  but it's failing on Docker and Launchpad testing.


New in v0.8.01 (2019/07/14)
---------------------------
* Merged in lp:~mterry/duplicity/gio-pydrive-fsdecode
  - Fix gio and pydrive backends to use fsdecode
* Merged in lp:~mterry/duplicity/uexc-string
  - The return type of util.uexc should always be a string.
* Fix some import conflicts with the "past" module
  - Rename collections.py to dup_collections.py
  - Remove all "from future.utils import old_div"
  - Replace old_div() with "//" (in py27 for a while).
  - All tests run for py3, unit tests run for py2.  The new
    import fail is "from future import standard_library"
* Fixed bug #1831178 sequence item 0: expected str instance, int found
  - Simply converted int to str when making list
* Merged in lp:~kaffeekiffer/duplicity/azure-python3-fix
  - Use util.fsencode to encode file string
* Fixed bug #1833573 0.8.00 does not work on Python 2
  - Fixed shebang to use /usr/bin/python instead of python
* Fixed bug #1833559 0.8 test fails with 'duplicity not found' errors
  - Fixed assumption that duplicity/rdiffdir were in $PATH
* Fixed failing test in testing/unit/test_globmatch.py
  - Someone is messing with regex.  Fix same.
  - See https://bugs.python.org/issue29995 for details
* Normalize shebang to just python, no version number
* Fix so most testing/*.py files have the future suggested lines
  - from __future__ import print_function
    from future import standard_library
    standard_library.install_aliases()
* Merged lp:~mterry/duplicity/boto-import
  - A couple functions in the boto backend were using the boto module
    without importing it first.