@@ -15,6 +15,8 @@ New in v0.8.02 (2019/07/??)
 * Fix language classifiers in setup.py
 * Remove speedup in testing backup.  The math was correct,
   but it's failing on Docker and Launchpad testing.
+* Fix so Docker image duplicity_test will update and pull
+  new bzr revisions if changed since last build.
 
 
 New in v0.8.01 (2019/07/14)
